# ResumeScreener

./: .replit  README.md  api_routes.py  app.py  auth.py  crud.py  main.py  models.py  pyproject.toml  requirements.txt  resume_parser.py  routes.py  web_routes.py
attached_assets/: Pasted--Prompt-Build-a-full-stack-Resume-Shortlisting-Web-Application-in-Replit-using-the-following-te-1748334722563.txt  Pasted-Pasted-Prompt-for-Resume-Shortlisting-Application-FastAPI-PostgreSQL-HTML-Build-a-Resume-Shortlistin-1747725953698.txt
instance/: app.db  resume.db
resumes/: .gitkeep
static/: app.js  style.css
static/css/: style.css
static/js/: main.js
templates/: 403.html  404.html  500.html  apply.html  base.html  index.html  login.html  register.html
templates/admin/: create_jd.html  edit_jd.html  reports.html  view_jds.html
