[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
]
